--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,7 +22,8 @@
                     android:id="@+id/recycler_view_chat_id"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"/>
 
             </LinearLayout>
 
