--- a/app/src/main/res/layout/layout_gallery_item.xml
+++ b/app/src/main/res/layout/layout_gallery_item.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/linearlayout_images_id" android:layout_width="match_parent" android:layout_height="match_parent">
-    <ImageView android:id="@+id/imageview_gallery_id" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:background="@color/black"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/linearlayout_images_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:gravity="center">
+    <ImageView android:id="@+id/imageview_gallery_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:background="@color/black" android:adjustViewBounds="true" android:layout_gravity="center_vertical" android:gravity = "center"/>
 </LinearLayout>
