--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,8 +22,7 @@
                     android:id="@+id/recycler_view_chat_id"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
